// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`steppedListCard > should hide the toggle button 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
      style="--_1o893js0: 100%;"
    >
      <div
        class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
      >
        <h1>
          Header
        </h1>
      </div>
      <div
        class="styles__1q0npw30 styles__1mv9gt41"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="styles__78oem50"
          style="--ivy5ld0: 1fr 3fr; --ivy5ld1: 1fr 3fr; --ivy5ld2: 1fr 3fr; --ivy5ld3: 1fr 3fr; --ivy5ld4: 1fr 3fr; --ivy5ld5: 1fr 3fr;"
        >
          <div
            class="styles__1q0npw31 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_2rem_xxsmall__mxir9347"
          >
            <ul
              class="styles__65l2di0"
            >
              <li
                class="styles__1q0npw36 styles__65l2di1 styles_disabled_false__65l2di2"
              >
                <div
                  class="styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_small__1k0b4m1c styles_undefined_compound_7__1k0b4m1m"
                >
                  1
                </div>
                <div
                  class="styles__65l2di4 styles_size_small__65l2di6"
                >
                  <h3
                    class="styles__1q0npw35 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a"
                  >
                    step1
                  </h3>
                </div>
              </li>
              <li
                class="styles__1q0npw36 styles__65l2di1 styles_disabled_false__65l2di2"
              >
                <div
                  class="styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_small__1k0b4m1c styles_undefined_compound_2__1k0b4m1h"
                >
                  2
                </div>
                <div
                  class="styles__65l2di4 styles_size_small__65l2di6"
                >
                  <h3
                    class="styles__1q0npw35 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="styles__1q0npw32 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
          >
            <div
              class="styles__1q0npw34"
            >
              <h3
                class="style__1yhcak80 style_prominence_default__1yhcak84 style_variant_headingSmallStrong__1yhcak816 style_undefined_compound_0__1yhcak81a"
              >
                First step
              </h3>
            </div>
            Description
            <div
              class="styles__1q0npw33"
            >
              <svg
                class="styles__b9ccy81"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`steppedListCard > should work with custom hide action 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
      style="--_1o893js0: 100%;"
    >
      <div
        class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
      >
        <h3
          class="style__1yhcak80 style_prominence_default__1yhcak84 style_variant_heading__1yhcak811 style_undefined_compound_0__1yhcak81a"
        >
          Header
        </h3>
        <button
          class="styles__1q0npw37 styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_small__1x0t66mg styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
          type="button"
        >
          Hide
        </button>
      </div>
      <div
        class="styles__1q0npw30 styles__1mv9gt41"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="styles__78oem50"
          style="--ivy5ld0: 1fr 3fr; --ivy5ld1: 1fr 3fr; --ivy5ld2: 1fr 3fr; --ivy5ld3: 1fr 3fr; --ivy5ld4: 1fr 3fr; --ivy5ld5: 1fr 3fr;"
        >
          <div
            class="styles__1q0npw31 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_2rem_xxsmall__mxir9347"
          >
            <ul
              class="styles__65l2di0"
            >
              <li
                class="styles__1q0npw36 styles__65l2di1 styles_disabled_false__65l2di2"
              >
                <div
                  class="styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_small__1k0b4m1c styles_undefined_compound_7__1k0b4m1m"
                >
                  1
                </div>
                <div
                  class="styles__65l2di4 styles_size_small__65l2di6"
                >
                  <h3
                    class="styles__1q0npw35 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a"
                  >
                    step1
                  </h3>
                </div>
              </li>
              <li
                class="styles__1q0npw36 styles__65l2di1 styles_disabled_false__65l2di2"
              >
                <div
                  class="styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_small__1k0b4m1c styles_undefined_compound_2__1k0b4m1h"
                >
                  2
                </div>
                <div
                  class="styles__65l2di4 styles_size_small__65l2di6"
                >
                  <h3
                    class="styles__1q0npw35 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="styles__1q0npw32 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
          >
            <div
              class="styles__1q0npw34"
            >
              <h1>
                First step
              </h1>
            </div>
            Description
            <div
              class="styles__1q0npw33"
            >
              <svg
                class="styles__b9ccy81"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`steppedListCard > should work with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
      style="--_1o893js0: 100%;"
    >
      <div
        class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
      >
        <h1>
          Header
        </h1>
        <div
          class="styles__1u0cyic5"
        >
          <button
            class="styles__1q0npw37 styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_small__1x0t66mg styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
            type="button"
          >
            hide button
          </button>
        </div>
      </div>
      <div
        class="styles__1q0npw30 styles__1mv9gt41"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="styles__78oem50"
          style="--ivy5ld0: 1fr 3fr; --ivy5ld1: 1fr 3fr; --ivy5ld2: 1fr 3fr; --ivy5ld3: 1fr 3fr; --ivy5ld4: 1fr 3fr; --ivy5ld5: 1fr 3fr;"
        >
          <div
            class="styles__1q0npw31 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_2rem_xxsmall__mxir9347"
          >
            <ul
              class="styles__65l2di0"
            >
              <li
                class="styles__1q0npw36 styles__65l2di1 styles_disabled_false__65l2di2"
              >
                <div
                  class="styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_small__1k0b4m1c styles_undefined_compound_7__1k0b4m1m"
                >
                  1
                </div>
                <div
                  class="styles__65l2di4 styles_size_small__65l2di6"
                >
                  <h3
                    class="styles__1q0npw35 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a"
                  >
                    step1
                  </h3>
                </div>
              </li>
              <li
                class="styles__1q0npw36 styles__65l2di1 styles_disabled_false__65l2di2"
              >
                <div
                  class="styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_small__1k0b4m1c styles_undefined_compound_2__1k0b4m1h"
                >
                  2
                </div>
                <div
                  class="styles__65l2di4 styles_size_small__65l2di6"
                >
                  <h3
                    class="styles__1q0npw35 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="styles__1q0npw32 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
          >
            <div
              class="styles__1q0npw34"
            >
              <h3
                class="style__1yhcak80 style_prominence_default__1yhcak84 style_variant_headingSmallStrong__1yhcak816 style_undefined_compound_0__1yhcak81a"
              >
                First step
              </h3>
            </div>
            Description
            <div
              class="styles__1q0npw33"
            >
              <svg
                class="styles__b9ccy81"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`steppedListCard > should work with pre-completed step 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
      style="--_1o893js0: 100%;"
    >
      <div
        class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
      >
        <h1>
          Header
        </h1>
        <button
          class="styles__1q0npw37 styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_small__1x0t66mg styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
          type="button"
        >
          Hide
        </button>
      </div>
      <div
        class="styles__1q0npw30 styles__1mv9gt41"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="styles__78oem50"
          style="--ivy5ld0: 1fr 3fr; --ivy5ld1: 1fr 3fr; --ivy5ld2: 1fr 3fr; --ivy5ld3: 1fr 3fr; --ivy5ld4: 1fr 3fr; --ivy5ld5: 1fr 3fr;"
        >
          <div
            class="styles__1q0npw31 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_2rem_xxsmall__mxir9347"
          >
            <ul
              class="styles__65l2di0"
            >
              <li
                class="styles__1q0npw36 styles__65l2di1 styles_disabled_false__65l2di2"
              >
                <div
                  class="styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_small__1k0b4m1c styles_undefined_compound_7__1k0b4m1m"
                >
                  1
                </div>
                <div
                  class="styles__65l2di4 styles_size_small__65l2di6"
                >
                  <h3
                    class="styles__1q0npw35 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a"
                  >
                    step1
                  </h3>
                </div>
              </li>
              <li
                class="styles__1q0npw36 styles__65l2di1 styles_disabled_false__65l2di2"
              >
                <div
                  class="styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_small__1k0b4m1c styles_undefined_compound_0__1k0b4m1f"
                >
                  <svg
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      CheckIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
                    />
                  </svg>
                </div>
                <div
                  class="styles__65l2di4 styles_size_small__65l2di6"
                >
                  <h3
                    class="styles__1q0npw35 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="styles__1q0npw32 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
          >
            <div
              class="styles__1q0npw34"
            >
              <h3
                class="style__1yhcak80 style_prominence_default__1yhcak84 style_variant_headingSmallStrong__1yhcak816 style_undefined_compound_0__1yhcak81a"
              >
                First step
              </h3>
            </div>
            Description
            <div
              class="styles__1q0npw33"
            >
              <svg
                class="styles__b9ccy81"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`steppedListCard > should work with step icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v"
      style="--_1o893js0: 100%;"
    >
      <div
        class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
      >
        <h1>
          Header
        </h1>
      </div>
      <div
        class="styles__1q0npw30 styles__1mv9gt41"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="styles__78oem50"
          style="--ivy5ld0: 1fr 3fr; --ivy5ld1: 1fr 3fr; --ivy5ld2: 1fr 3fr; --ivy5ld3: 1fr 3fr; --ivy5ld4: 1fr 3fr; --ivy5ld5: 1fr 3fr;"
        >
          <div
            class="styles__1q0npw31 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_2rem_xxsmall__mxir9347"
          >
            <ul
              class="styles__65l2di0"
            >
              <li
                class="styles__1q0npw36 styles__65l2di1 styles_disabled_false__65l2di2"
              >
                <div
                  class="styles__1k0b4m10 styles_prominence_strong__1k0b4m13 styles_size_small__1k0b4m1c styles_undefined_compound_7__1k0b4m1m"
                >
                  <svg
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      EscapeIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M8 7.333a.67.67 0 0 1-.667-.666.669.669 0 0 1 1.247-.334c.187.32.593.427.913.24a.666.666 0 0 0 .24-.913A2.01 2.01 0 0 0 8 4.66c-1.107 0-2 .893-2 2s.893 2 2 2c.367 0 .667.3.667.667a.669.669 0 0 1-1.247.333.666.666 0 0 0-.913-.24.666.666 0 0 0-.24.914c.346.593.993 1 1.733 1 1.107 0 2-.894 2-2 0-1.107-.893-2-2-2M4.667 6c.366 0 .666-.3.666-.667 0-.366-.3-.666-.666-.666H2v6.666h2.667c.366 0 .666-.3.666-.666S5.033 10 4.667 10H3.333V8.667h1.334c.366 0 .666-.3.666-.667s-.3-.667-.666-.667H3.333V6zm8.473 3.68c.18-.32.587-.44.907-.26v.007c.32.18.44.586.26.906a1.94 1.94 0 0 1-1.694 1.007c-1.1 0-1.946-.92-1.946-2V6.673c0-1.08.846-2 1.946-2 .74 0 1.367.414 1.694 1.007.18.32.06.727-.26.907a.67.67 0 0 1-.907-.26.6.6 0 0 0-.527-.327C12.3 6 12 6.273 12 6.667v2.68c.007.393.3.66.613.66.214 0 .414-.12.527-.327"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <div
                  class="styles__65l2di4 styles_size_small__65l2di6"
                >
                  <h3
                    class="styles__1q0npw35 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a"
                  >
                    step 1
                  </h3>
                </div>
              </li>
              <li
                class="styles__1q0npw36 styles__65l2di1 styles_disabled_false__65l2di2"
              >
                <div
                  class="styles__1k0b4m10 styles_prominence_default__1k0b4m12 styles_size_small__1k0b4m1c styles_undefined_compound_2__1k0b4m1h"
                >
                  2
                </div>
                <div
                  class="styles__65l2di4 styles_size_small__65l2di6"
                >
                  <h3
                    class="styles__1q0npw35 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="styles__1q0npw32 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
          >
            <div
              class="styles__1q0npw34"
            >
              <h3
                class="style__1yhcak80 style_prominence_default__1yhcak84 style_variant_headingSmallStrong__1yhcak816 style_undefined_compound_0__1yhcak81a"
              >
                First step
              </h3>
            </div>
            Description
            <div
              class="styles__1q0npw33"
            >
              <svg
                class="styles__b9ccy81"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
